<resources>
    <string name="app_name">ImperfectStillFood</string>
    <string name="Log_in_to_ImperfectStillFood">Log in to ImperfectStillFood</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Sign_up">Sign up</string>
    <string name="Forget_password">Forget password</string>
    <string name="Fruit">Fruit</string>
    <string name="Vegetable">Vegetable</string>
    <string name="Meat">Meat</string>
    <string name="Home">Home</string>
    <string name="Cart">Cart</string>
    <string name="Account">Account</string>
    <string name="Notification">Notification</string>
</resources>
