<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shi_g.imperfectstillfood.LoginActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_base_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_transparent_70percent"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:visibility="visible"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/login_form_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/base_margin"
            android:text="@string/Log_in_to_ImperfectStillFood"
            android:textColor="@color/textIconColorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/Email"
            android:textColor="@color/textIconColorPrimary" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/textIconColorPrimary" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/Password"
            android:textColor="@color/textIconColorPrimary" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryLight"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/textIconColorPrimary" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/Login" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/Sign_up" />

        <Button
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/Forget_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="0dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
