<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shi_g.imperfectstillfood.LoginActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/home_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:visibility="visible"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/menu"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/transparent"
            android:backgroundTint="@color/black_transparent_70percent"
            android:scaleType="fitStart"
            android:visibility="visible"
            app:srcCompat="@drawable/menublack" />

        <Button
            android:id="@+id/fruit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_weight="0.25"
            android:text="@string/Fruit" />

        <Button
            android:id="@+id/vegetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="0.25"
            android:text="@string/Vegetable" />

        <Button
            android:id="@+id/meat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="0.25"
            android:text="@string/Meat" />



    </LinearLayout>


</RelativeLayout>

